--- a/styles/style.scss
+++ b/styles/style.scss
@@ -53,6 +53,7 @@ header{
 
     @media (max-width: 576px) {
         max-width: 90%;
+        margin-top: 20px;
     }
 
     @media (min-width: 577px) and (max-width: 992px) {
